--- a/test.ipynb
+++ b/test.ipynb
@@ -3,9 +3,47 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f58409f8",
+   "id": "5ebbf0f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.in_out import document_loader, markdown_writer\n",
+    "from src.auth import gigachat_auth\n",
+    "from src.agent import extract_agent\n",
+    "from src.api import time_from_api"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a11a7dba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client_id = \"019a0884-a71f-7bf2-9d3a-b753f145b3e6\"\n",
+    "client_secret = \"9eac3076-7e96-46b2-8711-8c761e601539\"\n",
+    "\n",
+    "authorization_key = \"MDE5YTA4ODQtYTcxZi03YmYyLTlkM2EtYjc1M2YxNDViM2U2OjllYWMzMDc2LTdlOTYtNDZiMi04NzExLThjNzYxZTYwMTUzOQ==\"\n",
+    "\n",
+    "input_path = \"examples/math_sample.txt\"\n",
+    "\n",
+    "prompt_math = document_loader.load_document(\"prompts/math_prompt.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1185177c",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "Получен токен\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -13,68 +51,113 @@
       "d:\\Riminis\\LLM-MVP\\.venv\\Lib\\site-packages\\urllib3\\connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'ngw.devices.sberbank.ru'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n",
-      "Получен токен\n",
-      "2025-10-29 20:18:36+03:00\n"
-     ]
     }
    ],
    "source": [
-    "from prompts import agent_prompts\n",
-    "from src.in_out import document_loader, markdown_writer\n",
-    "from src.auth import gigachat_auth\n",
-    "from src.agent import extract_agent\n",
-    "from src.api import time_from_api\n",
+    "access_token = gigachat_auth.get_gigachat_token(client_id, client_secret)\n",
+    "if access_token: print(f\"Получен токен\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cf35a263",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time = time_from_api.get_current_time(\"Europe/Moscow\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6c6030b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n    Определение: Производная функции f(x) в точке x₀ — это предел отношения приращения функции к приращению аргумента при Δx → 0.\\n    Теорема Лагранжа: Если функция непрерывна на [a,b] и дифференцируема на (a,b), то ∃c ∈ (a,b): f'(c) = (f(b)-f(a))/(b-a).\\n    Формула: ∫ x^n dx = x^(n+1)/(n+1) + C, n ≠ -1.\\n    Пример: Найдём производную f(x) = x². Ответ: f'(x) = 2x.\\n    \""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = document_loader.load_document(input_path)\n",
+    "text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ad1d04f",
+   "metadata": {},
+   "source": [
+    "Следующая ячейка использует токены\n",
     "\n",
-    "\n",
-    "client_id = \"019a0884-a71f-7bf2-9d3a-b753f145b3e6\"\n",
-    "client_secret = \"33de7dd8-98d5-4682-8acd-883e65e17b87\"\n",
-    "\n",
-    "authorization_key = \"MDE5YTA4ODQtYTcxZi03YmYyLTlkM2EtYjc1M2YxNDViM2U2OjMzZGU3ZGQ4LTk4ZDUtNDY4Mi04YWNkLTg4M2U2NWUxN2I4Nw==\"\n",
-    "\n",
-    "input_path = \"examples/math_sample.txt\"\n",
-    "\n",
-    "\n",
-    "def main():\n",
-    "    access_token = gigachat_auth.get_gigachat_token(client_id, client_secret)\n",
-    "    if access_token: print(f\"Получен токен\")\n",
-    "\n",
-    "    #   test_api_giga(access_token)\n",
-    "\n",
-    "    print(test_api_time(\"Europe/Moscow\"))\n",
-    "\n",
-    "\n",
-    "\n",
-    "def test_api_giga(access_token):\n",
-    "    text = document_loader.load_document(input_path)\n",
-    "\n",
-    "    extracted_math = extract_agent.extract_agent_entities(text, access_token, prompt=agent_prompts.MATH_AGENT_PROMPT)\n",
-    "\n",
-    "    markdown_writer.save_to_markdown(extracted_math, \"examples/math_summary.md\")\n",
-    "    print(f\"Результат сохранён в examples/math_summary.md\")\n",
-    "\n",
-    "    print(f\"Обработка завершена\")\n",
-    "    return '200'\n",
-    "\n",
-    "\n",
-    "def test_api_time(time_zone):\n",
-    "    time = time_from_api.get_current_time(time_zone)\n",
-    "    return time\n",
-    "\n",
-    "\n",
-    "main()\n",
-    "\n"
+    "> 100 раз её НЕ запускать"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fe017ce7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Riminis\\LLM-MVP\\.venv\\Lib\\site-packages\\urllib3\\connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'gigachat.devices.sberbank.ru'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'definitions': ['Производная функции f(x) в точке x₀ — это предел отношения приращения функции к приращению аргумента при Δx → 0.'],\n",
+       " 'theorems': [\"Теорема Лагранжа: Если функция непрерывна на [a,b] и дифференцируема на (a,b), то ∃c ∈ (a,b): f'(c) = (f(b)-f(a))/(b-a).\"],\n",
+       " 'formulas': ['∫ x^n dx = x^(n+1)/(n+1) + C, n ≠ -1.'],\n",
+       " 'examples': [\"Найдём производную f(x) = x². Ответ: f'(x) = 2x.\"]}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extracted_math = extract_agent.extract_agent_entities(text, access_token, prompt=prompt_math)\n",
+    "extracted_math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1fbb90da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'OK'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "markdown_writer.save_to_markdown(extracted_math, \"examples/math_summary.md\", time, 'math')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b521ad27",
+   "id": "7281815a",
    "metadata": {},
    "outputs": [],
    "source": []
