--- a/test.ipynb
+++ b/test.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "input_path = \"examples/math_sample.txt\"\n",
     "\n",
-    "prompt_math = document_loader.load_document(\"prompts/math_prompt.txt\")"
+    "prompt_math = document_loader.load_document(\"prompts/polymorphic_prompt.txt\")"
    ]
   },
   {
@@ -117,10 +117,11 @@
     {
      "data": {
       "text/plain": [
-       "{'definitions': ['Производная функции f(x) в точке x₀ — это предел отношения приращения функции к приращению аргумента при Δx → 0.'],\n",
-       " 'theorems': [\"Теорема Лагранжа: Если функция непрерывна на [a,b] и дифференцируема на (a,b), то ∃c ∈ (a,b): f'(c) = (f(b)-f(a))/(b-a).\"],\n",
-       " 'formulas': ['∫ x^n dx = x^(n+1)/(n+1) + C, n ≠ -1.'],\n",
-       " 'examples': [\"Найдём производную f(x) = x². Ответ: f'(x) = 2x.\"]}"
+       "{'domain': 'Математика',\n",
+       " 'structured': {'definitions': ['Производная функции f(x) в точке x₀ — это предел отношения приращения функции к приращению аргумента при Δx → 0.'],\n",
+       "  'theorems': [\"Теорема Лагранжа: Если функция непрерывна на [a,b] и дифференцируема на (a,b), то ∃c ∈ (a,b): f'(c) = (f(b)-f(a))/(b-a).\"],\n",
+       "  'formulas': ['∫ x^n dx = x^(n+1)/(n+1) + C, n ≠ -1.'],\n",
+       "  'examples': [\"Найдём производную f(x) = x². Ответ: f'(x) = 2x.\"]}}"
       ]
      },
      "execution_count": 6,
@@ -151,13 +152,37 @@
     }
    ],
    "source": [
-    "markdown_writer.save_to_markdown(extracted_math, \"examples/math_summary.md\", time, 'math')"
+    "markdown_writer.save_to_markdown(extracted_math, \"examples/test1.md\", time, 'math')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7281815a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'definitions': ['Производная функции f(x) в точке x₀ — это предел отношения приращения функции к приращению аргумента при Δx → 0.'],\n",
+       " 'theorems': [\"Теорема Лагранжа: Если функция непрерывна на [a,b] и дифференцируема на (a,b), то ∃c ∈ (a,b): f'(c) = (f(b)-f(a))/(b-a).\"],\n",
+       " 'formulas': ['∫ x^n dx = x^(n+1)/(n+1) + C, n ≠ -1.'],\n",
+       " 'examples': [\"Найдём производную f(x) = x². Ответ: f'(x) = 2x.\"]}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extracted_math['structured']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7281815a",
+   "id": "13233cd0",
    "metadata": {},
    "outputs": [],
    "source": []
