--- a/test.ipynb
+++ b/test.ipynb
@@ -7,15 +7,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.in_out import document_loader, markdown_writer\n",
-    "from src.auth import gigachat_auth\n",
-    "from src.agent import extract_agent\n",
-    "from src.api import time_from_api"
+    "import os\n",
+    "import json\n",
+    "from pathlib import Path\n",
+    "from src.extract_agent import GigaChatClient\n",
+    "from src.document_loader import DocumentLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "a11a7dba",
    "metadata": {},
    "outputs": [],
@@ -23,166 +24,96 @@
     "client_id = \"019a0884-a71f-7bf2-9d3a-b753f145b3e6\"\n",
     "client_secret = \"9eac3076-7e96-46b2-8711-8c761e601539\"\n",
     "\n",
-    "authorization_key = \"MDE5YTA4ODQtYTcxZi03YmYyLTlkM2EtYjc1M2YxNDViM2U2OjllYWMzMDc2LTdlOTYtNDZiMi04NzExLThjNzYxZTYwMTUzOQ==\"\n",
+    "input_file = \"examples/math_sample.txt\"\n",
+    "prompt_file = \"prompts/universal_prompt.txt\"\n",
     "\n",
-    "input_path = \"examples/math_sample.txt\"\n",
-    "\n",
-    "prompt_math = document_loader.load_document(\"prompts/polymorphic_prompt.txt\")"
+    "output_md = \"examples/result.md\"\n",
+    "output_json = \"examples/result.json\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "1185177c",
+   "execution_count": 10,
+   "id": "fb54c879",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = GigaChatClient(client_id=client_id, client_secret=client_secret)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ae4c5f76",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200\n",
-      "Получен токен\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Riminis\\LLM-MVP\\.venv\\Lib\\site-packages\\urllib3\\connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'ngw.devices.sberbank.ru'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
-      "  warnings.warn(\n"
+      "Прочитан файл: examples/math_sample.txt\n",
+      "Размер: 7727 символов\n"
      ]
     }
    ],
    "source": [
-    "access_token = gigachat_auth.get_gigachat_token(client_id, client_secret)\n",
-    "if access_token: print(f\"Получен токен\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "cf35a263",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time = time_from_api.get_current_time(\"Europe/Moscow\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "6c6030b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n    Определение: Производная функции f(x) в точке x₀ — это предел отношения приращения функции к приращению аргумента при Δx → 0.\\n    Теорема Лагранжа: Если функция непрерывна на [a,b] и дифференцируема на (a,b), то ∃c ∈ (a,b): f'(c) = (f(b)-f(a))/(b-a).\\n    Формула: ∫ x^n dx = x^(n+1)/(n+1) + C, n ≠ -1.\\n    Пример: Найдём производную f(x) = x². Ответ: f'(x) = 2x.\\n    \""
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text = document_loader.load_document(input_path)\n",
-    "text"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1ad1d04f",
-   "metadata": {},
-   "source": [
-    "Следующая ячейка использует токены\n",
+    "text = DocumentLoader.load(input_file)['content']\n",
     "\n",
-    "> 100 раз её НЕ запускать"
+    "print(f\"Прочитан файл: {input_file}\")\n",
+    "print(f\"Размер: {len(text)} символов\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "fe017ce7",
+   "execution_count": 13,
+   "id": "5be3ff63",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d:\\Riminis\\LLM-MVP\\.venv\\Lib\\site-packages\\urllib3\\connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'gigachat.devices.sberbank.ru'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
-      "  warnings.warn(\n"
+      "Прочитан файл: prompts/universal_prompt.txt\n",
+      "Размер: 3892 символов\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'domain': 'Математика',\n",
-       " 'structured': {'definitions': ['Производная функции f(x) в точке x₀ — это предел отношения приращения функции к приращению аргумента при Δx → 0.'],\n",
-       "  'theorems': [\"Теорема Лагранжа: Если функция непрерывна на [a,b] и дифференцируема на (a,b), то ∃c ∈ (a,b): f'(c) = (f(b)-f(a))/(b-a).\"],\n",
-       "  'formulas': ['∫ x^n dx = x^(n+1)/(n+1) + C, n ≠ -1.'],\n",
-       "  'examples': [\"Найдём производную f(x) = x². Ответ: f'(x) = 2x.\"]}}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "extracted_math = extract_agent.extract_agent_entities(text, access_token, prompt=prompt_math)\n",
-    "extracted_math"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "1fbb90da",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'OK'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "markdown_writer.save_to_markdown(extracted_math, \"examples/test1.md\", time, 'math')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "7281815a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'definitions': ['Производная функции f(x) в точке x₀ — это предел отношения приращения функции к приращению аргумента при Δx → 0.'],\n",
-       " 'theorems': [\"Теорема Лагранжа: Если функция непрерывна на [a,b] и дифференцируема на (a,b), то ∃c ∈ (a,b): f'(c) = (f(b)-f(a))/(b-a).\"],\n",
-       " 'formulas': ['∫ x^n dx = x^(n+1)/(n+1) + C, n ≠ -1.'],\n",
-       " 'examples': [\"Найдём производную f(x) = x². Ответ: f'(x) = 2x.\"]}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "extracted_math['structured']"
+    "prompt = DocumentLoader.load(prompt_file)['content']\n",
+    "\n",
+    "print(f\"Прочитан файл: {prompt_file}\")\n",
+    "print(f\"Размер: {len(prompt)} символов\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13233cd0",
+   "id": "e1953828",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary = client.chat(text=text, prompt=prompt)\n",
+    "\n",
+    "print(f\"Получена выжимка: {len(summary)} символов\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "446b2320",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(output_md, \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(summary)\n",
+    "\n",
+    "print(f\"Markdown сохранён: {output_md}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe36a4ef",
    "metadata": {},
    "outputs": [],
    "source": []
